Refactoring to Document.Context